feat: Enhance analysis and metadata extraction for COBOL dialects
- Added self-evaluation report generation in CodeTaskRunner.
- Implemented metadata extraction for using parameters in CallFlowNode.
- Extended CobolFlowNodeFactory to support additional COBOL statements with typed nodes.
- Introduced DialectMetadataParser for parsing dialect-specific metadata.
- Updated DialectStatementFlowNode to include metadata from DialectMetadataParser.
- Enhanced GoToFlowNode and PerformProcedureFlowNode to provide detailed metadata.
- Created TypedStatementFlowNode for handling typed statements with metadata.
- Added regression tests to validate metadata extraction for various COBOL constructs.